// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bfs extracts ex:Something first 1`] = `
Array [
  Object {
    "id": "1",
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "DefaultGraph",
          "value": "",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/Something",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "2",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/Something",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/p",
        },
        "values": Array [
          Object {
            "id": "3",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/o",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/relatedTo",
        },
        "values": Array [
          Object {
            "id": "4",
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/Alice.md",
                },
              ],
              "types": Array [],
            },
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Object {
                    "id": "5",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "Charlie",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/note/Charlie.md",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/s",
    },
  },
  Object {
    "id": "6",
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/Note",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "7",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "8",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "WhiteRabbit",
            },
          },
          Object {
            "id": "9",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString",
              },
              "language": "es",
              "termType": "Literal",
              "value": "Conejo blanco",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Object {
            "id": "10",
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/WhiteRabbit.md",
                },
              ],
              "types": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/Block",
                },
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/Rabbit",
                },
              ],
            },
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Object {
                    "id": "11",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                  Object {
                    "id": "12",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/Rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Object {
                    "id": "13",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Object {
                    "id": "14",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Object {
                    "id": "15",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/720/1*HZazTjGg9EBSOoz34IN-tA.jpeg",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/contains",
                },
                "values": Array [
                  Object {
                    "id": "16",
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/WhiteRabbit.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Block",
                        },
                        Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/Place",
                        },
                      ],
                    },
                    "rows": Array [
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                        },
                        "values": Array [
                          Object {
                            "id": "20",
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://pkm-united.org/Block",
                            },
                          },
                          Object {
                            "id": "21",
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://schema.org/Place",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/name",
                        },
                        "values": Array [
                          Object {
                            "id": "22",
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Wozenderlands",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/selector",
                        },
                        "values": Array [
                          Object {
                            "id": "23",
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Wozenderlands",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/postalCode",
                        },
                        "values": Array [
                          Object {
                            "id": "24",
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "4879",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/streetAddress",
                        },
                        "values": Array [
                          Object {
                            "id": "25",
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "5 Wonderland Street",
                            },
                          },
                        ],
                      },
                    ],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b0_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/address",
                },
                "values": Array [
                  Object {
                    "id": "17",
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/WhiteRabbit.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Block",
                        },
                        Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/Place",
                        },
                      ],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b0_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/knows",
                },
                "values": Array [
                  Object {
                    "id": "18",
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/Alice.md",
                        },
                      ],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/note/Charlie.md",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
                },
                "values": Array [
                  Object {
                    "id": "19",
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/Alice.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Note",
                        },
                      ],
                    },
                    "rows": Array [
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                        },
                        "values": Array [
                          Object {
                            "id": "26",
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://pkm-united.org/Note",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/name",
                        },
                        "values": Array [
                          Object {
                            "id": "27",
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Alice",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/contains",
                        },
                        "values": Array [
                          Object {
                            "id": "28",
                            "meta": Object {
                              "graphs": Array [
                                Object {
                                  "termType": "NamedNode",
                                  "value": "http://example.org/note/Alice.md",
                                },
                              ],
                              "types": Array [
                                Object {
                                  "termType": "NamedNode",
                                  "value": "http://pkm-united.org/Block",
                                },
                              ],
                            },
                            "rows": Array [
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                                },
                                "values": Array [
                                  Object {
                                    "id": "30",
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "termType": "NamedNode",
                                      "value": "http://pkm-united.org/Block",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://schema.org/name",
                                },
                                "values": Array [
                                  Object {
                                    "id": "31",
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "datatype": Object {
                                        "termType": "NamedNode",
                                        "value": "http://www.w3.org/2001/XMLSchema#string",
                                      },
                                      "language": "",
                                      "termType": "Literal",
                                      "value": "Alice",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://pkm-united.org/selector",
                                },
                                "values": Array [
                                  Object {
                                    "id": "32",
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "datatype": Object {
                                        "termType": "NamedNode",
                                        "value": "http://www.w3.org/2001/XMLSchema#string",
                                      },
                                      "language": "",
                                      "termType": "Literal",
                                      "value": "Alice",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://schema.org/image",
                                },
                                "values": Array [
                                  Object {
                                    "id": "33",
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "termType": "NamedNode",
                                      "value": "https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg",
                                    },
                                  },
                                ],
                              },
                            ],
                            "term": Object {
                              "termType": "BlankNode",
                              "value": "n3-1",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/knows",
                        },
                        "values": Array [
                          Object {
                            "id": "29",
                            "meta": Object {
                              "graphs": Array [
                                Object {
                                  "termType": "NamedNode",
                                  "value": "http://example.org/note/Alice.md",
                                },
                              ],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://example.org/note/Charlie.md",
                            },
                          },
                        ],
                      },
                    ],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/note/Alice.md",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-0",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/WhiteRabbit.md",
    },
  },
  Object {
    "id": "34",
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "quad",
        },
        "values": Array [
          Object {
            "id": "35",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "oh-my",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "shared",
    },
  },
  Object {
    "id": "36",
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "DefaultGraph",
          "value": "",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "37",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "loves to drink tea with",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
    },
  },
]
`;

exports[`bfs extracts only alice graph 1`] = `
Array [
  Object {
    "id": "38",
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "39",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Charlie",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/Charlie.md",
    },
  },
  Object {
    "id": "40",
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/Note",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "41",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "42",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Alice",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Object {
            "id": "43",
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/Alice.md",
                },
              ],
              "types": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/Block",
                },
              ],
            },
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Object {
                    "id": "45",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Object {
                    "id": "46",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "Alice",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Object {
                    "id": "47",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "Alice",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Object {
                    "id": "48",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-3",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/knows",
        },
        "values": Array [
          Object {
            "id": "44",
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/Alice.md",
                },
              ],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/note/Charlie.md",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/Alice.md",
    },
  },
  Object {
    "id": "49",
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "quad",
        },
        "values": Array [
          Object {
            "id": "50",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "oh-my",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "shared",
    },
  },
]
`;

exports[`bfs maps URIs to their corresponding IDs 1`] = `
TermMap {
  "index": Map {
    "<http://example.org/note/WhiteRabbit.md>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/note/WhiteRabbit.md",
      },
      "value": Array [
        "91",
      ],
    },
    "<http://pkm-united.org/Note>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://pkm-united.org/Note",
      },
      "value": Array [
        "92",
        "112",
      ],
    },
    "\\"WhiteRabbit\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "WhiteRabbit",
      },
      "value": Array [
        "93",
      ],
    },
    "\\"Conejo blanco\\"@es" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString",
        },
        "language": "es",
        "termType": "Literal",
        "value": "Conejo blanco",
      },
      "value": Array [
        "94",
      ],
    },
    "_:n3-6" => Object {
      "term": Object {
        "termType": "BlankNode",
        "value": "n3-6",
      },
      "value": Array [
        "95",
      ],
    },
    "<http://pkm-united.org/Block>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://pkm-united.org/Block",
      },
      "value": Array [
        "96",
        "105",
        "116",
      ],
    },
    "<http://example.org/Rabbit>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/Rabbit",
      },
      "value": Array [
        "97",
      ],
    },
    "\\"White rabbit\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "White rabbit",
      },
      "value": Array [
        "98",
        "99",
      ],
    },
    "<https://miro.medium.com/max/720/1*HZazTjGg9EBSOoz34IN-tA.jpeg>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "https://miro.medium.com/max/720/1*HZazTjGg9EBSOoz34IN-tA.jpeg",
      },
      "value": Array [
        "100",
      ],
    },
    "_:b3_b4" => Object {
      "term": Object {
        "termType": "BlankNode",
        "value": "b3_b4",
      },
      "value": Array [
        "101",
        "102",
      ],
    },
    "<http://example.org/note/Charlie.md>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/note/Charlie.md",
      },
      "value": Array [
        "103",
        "115",
        "127",
      ],
    },
    "<http://example.org/note/Alice.md>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/note/Alice.md",
      },
      "value": Array [
        "104",
      ],
    },
    "<http://schema.org/Place>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://schema.org/Place",
      },
      "value": Array [
        "106",
      ],
    },
    "\\"Wozenderlands\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "Wozenderlands",
      },
      "value": Array [
        "107",
        "108",
      ],
    },
    "\\"4879\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "4879",
      },
      "value": Array [
        "109",
      ],
    },
    "\\"5 Wonderland Street\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "5 Wonderland Street",
      },
      "value": Array [
        "110",
      ],
    },
    "\\"Charlie\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "Charlie",
      },
      "value": Array [
        "111",
      ],
    },
    "\\"Alice\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "Alice",
      },
      "value": Array [
        "113",
        "117",
        "118",
      ],
    },
    "_:n3-7" => Object {
      "term": Object {
        "termType": "BlankNode",
        "value": "n3-7",
      },
      "value": Array [
        "114",
      ],
    },
    "<https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg",
      },
      "value": Array [
        "119",
      ],
    },
    "<shared>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "shared",
      },
      "value": Array [
        "120",
      ],
    },
    "<oh-my>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "oh-my",
      },
      "value": Array [
        "121",
      ],
    },
    "<http://example.org/property/loves%20to%20drink%20tea%20with>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
      },
      "value": Array [
        "122",
      ],
    },
    "\\"loves to drink tea with\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "loves to drink tea with",
      },
      "value": Array [
        "123",
      ],
    },
    "<http://example.org/s>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/s",
      },
      "value": Array [
        "124",
      ],
    },
    "<http://example.org/Something>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/Something",
      },
      "value": Array [
        "125",
      ],
    },
    "<http://example.org/o>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/o",
      },
      "value": Array [
        "126",
      ],
    },
  },
}
`;

exports[`bfs maxDepth = 2 1`] = `
Array [
  Object {
    "id": "51",
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/Note",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "52",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "53",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "WhiteRabbit",
            },
          },
          Object {
            "id": "54",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString",
              },
              "language": "es",
              "termType": "Literal",
              "value": "Conejo blanco",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Object {
            "id": "55",
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/WhiteRabbit.md",
                },
              ],
              "types": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/Block",
                },
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/Rabbit",
                },
              ],
            },
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Object {
                    "id": "56",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                  Object {
                    "id": "57",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/Rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Object {
                    "id": "58",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Object {
                    "id": "59",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Object {
                    "id": "60",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/720/1*HZazTjGg9EBSOoz34IN-tA.jpeg",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/contains",
                },
                "values": Array [
                  Object {
                    "id": "61",
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/WhiteRabbit.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Block",
                        },
                        Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/Place",
                        },
                      ],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b2_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/address",
                },
                "values": Array [
                  Object {
                    "id": "62",
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/WhiteRabbit.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Block",
                        },
                        Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/Place",
                        },
                      ],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b2_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/knows",
                },
                "values": Array [
                  Object {
                    "id": "63",
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/Alice.md",
                        },
                      ],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/note/Charlie.md",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
                },
                "values": Array [
                  Object {
                    "id": "64",
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/Alice.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Note",
                        },
                      ],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/note/Alice.md",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-4",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/WhiteRabbit.md",
    },
  },
  Object {
    "id": "65",
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/Block",
        },
        Object {
          "termType": "NamedNode",
          "value": "http://schema.org/Place",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "66",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Block",
            },
          },
          Object {
            "id": "67",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://schema.org/Place",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "68",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Wozenderlands",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/selector",
        },
        "values": Array [
          Object {
            "id": "69",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Wozenderlands",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/postalCode",
        },
        "values": Array [
          Object {
            "id": "70",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "4879",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/streetAddress",
        },
        "values": Array [
          Object {
            "id": "71",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "5 Wonderland Street",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "BlankNode",
      "value": "b2_b4",
    },
  },
  Object {
    "id": "72",
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "quad",
        },
        "values": Array [
          Object {
            "id": "73",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "oh-my",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "shared",
    },
  },
  Object {
    "id": "74",
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "75",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Charlie",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/Charlie.md",
    },
  },
  Object {
    "id": "76",
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/Note",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "77",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "78",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Alice",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Object {
            "id": "79",
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/Alice.md",
                },
              ],
              "types": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/Block",
                },
              ],
            },
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Object {
                    "id": "81",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Object {
                    "id": "82",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "Alice",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Object {
                    "id": "83",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "Alice",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Object {
                    "id": "84",
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-5",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/knows",
        },
        "values": Array [
          Object {
            "id": "80",
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/Alice.md",
                },
              ],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/note/Charlie.md",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/Alice.md",
    },
  },
  Object {
    "id": "85",
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "DefaultGraph",
          "value": "",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "86",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "loves to drink tea with",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
    },
  },
  Object {
    "id": "87",
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "DefaultGraph",
          "value": "",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/Something",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "88",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/Something",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/p",
        },
        "values": Array [
          Object {
            "id": "89",
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/o",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/relatedTo",
        },
        "values": Array [
          Object {
            "id": "90",
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/Alice.md",
                },
              ],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/note/Charlie.md",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/s",
    },
  },
]
`;
